# bench.im

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
.github/workflows/: build.yml  release.yml
client/: Cargo.toml
client/src/: lib.rs  main.rs  models.rs  ping_native.rs  ping_system.rs
compiled-lang/: en.json  zh.json
lang/: en.json  zh.json
scripts/: build.sh  test.sh
server/: Cargo.toml
server/api/: Cargo.toml
server/api/src/: lib.rs  pings.rs
server/entity/: Cargo.toml
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20250820_074013_add_updated.rs  m20250823_000000_add_ping_indexes.rs  m20260407_000000_enable_wal.rs
server/service/: Cargo.toml
server/service/src/: application.rs  error.rs  forms.rs  ip_geo.rs  lib.rs  models.rs  mutation.rs  query.rs
server/service/src/dto/input/: application.rs  machine.rs  mod.rs  ping.rs  target.rs
server/service/src/dto/output/: machine.rs  mod.rs  ping.rs  target.rs
server/service/src/infrastructure/: ip_geo.rs  mod.rs
server/service/src/services/: application.rs  machine.rs  ping.rs  target.rs
server/src/: main.rs
server/web/: Cargo.toml  build.rs  input.css  tailwind.config.js
server/web/assets/css/: app.css
server/web/assets/js/: admin.js  app.js  charts.js
server/web/src/: admin.rs  application.rs  config.rs  error.rs  extractors.rs  index.rs  lib.rs  machines.rs  pings.rs  state.rs  targets.rs  templates.rs
server/web/src/core/: assets.rs  error.rs  extractors.rs  mod.rs  state.rs
server/web/src/handlers/: mod.rs
server/web/src/handlers/api/: machines.rs  mod.rs  pings.rs  targets.rs
server/web/src/handlers/common/: machines.rs  mod.rs  targets.rs
server/web/src/handlers/pages/: admin.rs  application.rs  index.rs  mod.rs
server/web/src/routes/: api.rs  pages.rs
server/web/src/templates/: application.rs  mod.rs  pages.rs
server/web/templates/: base.html  index.html  machine.html  target.html
server/web/templates/admin/: base.html  delete.html  edit_machine.html  edit_target.html  index.html  login.html
server/web/templates/apply/: disabled.html  index.html  success.html
server/web/templates/components/: machines_list.html
src/: App.jsx  app.css  detail.jsx  index_page.jsx  intro.jsx  machine_page.jsx  machines_page.jsx  main.jsx  new.jsx  servers.jsx  tasks.jsx
src/admin/: delete_machine_page.jsx  delete_target_page.jsx  edit_machine_page.jsx  edit_target_page.jsx  index_page.jsx  login_page.jsx
src/admin/components/: machine_block.jsx  machines_block.jsx  target_block.jsx  targets_block.jsx
src/components/: 404.jsx  home.jsx  index.jsx  light_block.jsx  login.jsx  machine.jsx  machine_block.jsx  machine_item.jsx  machine_task.jsx  machine_task_chart.jsx  machine_task_create.jsx  machine_task_item.jsx  machines.jsx  machines_block.jsx  my.jsx  new_machine.jsx  new_server.jsx  ping_block.jsx  search.jsx  searchbar.jsx  server.jsx  server_create.jsx  server_item.jsx  server_list.jsx  server_list_create.jsx  server_list_id_items.jsx  server_list_item.jsx  servers.jsx  signup.jsx  tcpping_block.jsx
src/pages/: index_page.jsx  machine_page.jsx  machines_page.jsx
web/: index.html  package-lock.json  package.json
web/src/: app.css  main.jsx
web/src/admin/: delete_target_page.jsx  edit_target_page.jsx  index.jsx  index_page.jsx  login_page.jsx  utils.jsx
web/src/admin/components/: index.jsx  machine_block.jsx  target_block.jsx  targets_block.jsx
web/src/components/: index.jsx
web/src/pages/: index_page.jsx  machine_page.jsx
