[package]
name = "server-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
entity = { path = "../entity" }

serde = { version = "1", features = ["derive"] }
chrono = "0.4"
validator = { version = "0.20", features = ["derive"] }
ip2region = { git = "https://github.com/lionsoul2014/ip2region.git", branch = "master" }
regex = "1.10"
lazy_static = "1.4"
rand = "0.8"
base64 = "0.22"
thiserror = "1"
tracing = "0.1"

[dependencies.sea-orm]
version = "1"
features = [
    "debug-print",
    "runtime-tokio",
    "sqlx-sqlite",
    "with-chrono",
]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
