[package]
name = "server-web"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[dependencies]
server-service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-valid = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["timeout", "trace"] }

# 模板引擎
askama = { version = "0.13", features = ["serde_json"] }
askama_axum = "0.4"

# 静态资源嵌入
rust-embed = "8"

anyhow = "1.0"
mime_guess = "2.0"
dotenvy = "0.15"
chrono = "0.4"
serde = "1"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.20", features = ["derive"] }
thiserror = "1.0"
futures = "0.3"
sea-orm = { version = "1" }
ipnet = "2"
